[package]
name = "stdf_translator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rust-stdf = "0.3.1"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
futures = "0.3"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
anyhow = "1.0"
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "stream"] }
flate2 = "1.0"
zip = "0.6"
